--- a/package.json
+++ b/package.json
@@ -9,9 +9,18 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "next": "16.0.0"
+    "@react-three/drei": "^10.3.0",
+    "@react-three/fiber": "^9.1.2",
+    "@react-three/xr": "^6.6.17",
+    "@types/three": "^0.177.0",
+    "@use-gesture/react": "^10.3.1",
+    "drei": "^2.2.21",
+    "framer-motion": "^12.18.2",
+    "next": "15.3.4",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-use-gesture": "^9.1.3",
+    "three": "^0.177.0"
   },
   "devDependencies": {
     "typescript": "^5",
